syntax = "proto3";
package proto;

option go_package = "./proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// WarriorTalents message.
message WarriorTalents {
}

// END GENERATED

message WarriorOptions {
}

message ArmsWarrior {
	message Rotation {}

	message Options {
		WarriorOptions class_options = 1;
		bool stance_snapshot = 2;
	}
	Options options = 1;
}

message FuryWarrior {
	message Rotation {}

	message Options {
		WarriorOptions class_options = 1;
		bool stance_snapshot = 2;
		WarriorSyncType sync_type = 3;
		bool use_item_swap_bonus_stats = 4;
	}
	Options options = 1;
}

enum WarriorSyncType {
	WarriorNoSync = 0;
	WarriorSyncMainhandOffhandSwings = 1;
  }

message ProtectionWarrior {
	message Rotation {}

	message Options {
		WarriorOptions class_options = 1;
	}
	Options options = 1;
}
